# quantlab

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
.claude/skills/lens_output/: SKILL.md
.github/workflows/: ci.yml
data/cowork_outputs/: .gitkeep
data/universe/: .gitkeep
docs/: ARCHITECTURE.md  BLUEPRINT.md  COWORK_BRIEF.md  DECISIONS.md  QUESTIONS.md
notebooks/: README.md
scripts/: README.md  bootstrap.sh
src/quantlab/: __init__.py  config.py  logging.py
src/quantlab/data/: __init__.py
src/quantlab/execution/: __init__.py
src/quantlab/features/: __init__.py
src/quantlab/features/definitions/: __init__.py
src/quantlab/labels/: __init__.py
src/quantlab/lenses/: __init__.py
src/quantlab/models/: __init__.py
src/quantlab/portfolio/: __init__.py
src/quantlab/regime/: __init__.py
src/quantlab/research/: __init__.py
src/quantlab/validation/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_logging.py  test_smoke.py
