[project]
name = "quantlab"
version = "0.1.0"
description = "Multi-lens swing trading system with LLM-augmented research factory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "QuantLab" }]

dependencies = [
    # Data & storage
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    # Market data & calendars
    "pandas-market-calendars>=4.4.0",
    # ML
    "scikit-learn>=1.5.0",
    "lightgbm>=4.3.0",
    # Broker & HTTP
    # NOTE: no anthropic SDK — all LLM-mediated work runs in Cowork (ADR-005).
    "ib-insync>=0.9.86",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",  # retry logic
    # Config & logging
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Scheduling (dev)
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantlab"]

# ----------------------------------------------------------------------------
# Tool configuration
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "ANN", # flake8-annotations (type hint enforcement)
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print statements)
]
ignore = [
    "S101",   # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]
"scripts/*" = ["T20"]  # print is OK in throwaway scripts
"notebooks/*" = ["ANN", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
files = ["src/quantlab"]

[[tool.mypy.overrides]]
module = [
    "ib_insync.*",
    "pandas_market_calendars.*",
    "apscheduler.*",
    "lightgbm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: tests that take >1 second (deselect with -m 'not slow')",
    "integration: tests requiring external services",
    "requires_polygon: tests requiring Polygon API key",
    "requires_ibkr: tests requiring IBKR connection",
]

[tool.coverage.run]
source = ["src/quantlab"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
